# Deep_Learning

./: Basic_RNN.py
Basic_CNN/: basic_cnn_bn.py  basic_cnn_bn_remake.py  batch_test.py  bool_test.py  convert_data_to_matrix.py  data_processing.py  dumpdump.py  dumpdumptestbanch.py  globalVarTest.py  imageToLMDB.py  imageToLMDB_v1.py  load_npy.py  miniBatch_shape.py  retrain_trail.py  shape_test.py  shuffle_test.py
CUHK_CPM/GPS_Project/: kill_four_axis.sh  kill_six_axis.sh  launch_four_axis.sh  launch_six_axis.sh
CUHK_CPM/GPS_Project/GPS_main/: .previous_experiment  VS_log.txt  compile_proto.sh  log  run_new_experiment_pi.sh  (+1 more)
CUHK_CPM/GPS_Project/RR_Robot/src/rr_plugin/: CMakeLists.txt  package.xml
CUHK_CPM/GPS_Project/RR_Robot/src/rr_plugin/msg/: Contact.msg  Contacts.msg
CUHK_CPM/GPS_Project/RR_Robot/src/rr_plugin/srv/: AddGroup.srv  DelGroup.srv  GetGripperData.srv  SetFloat64.srv  SetFloat64MultiArray.srv  SetGripperData.srv  SetPoint.srv
DVS_Alexnet/: DVS_alexnet.py  DVS_alexnet_forward.py  caffe_classes_DVS.py  create_dataset.py
DVS_Alexnet/dvs_data_20170712/: info.txt
DirtyAlex/: myalexnet_forward.py
GPUTest/: gpuTest1.py  gpuTest2.py  gpuTest3.py  gpuTest4.py  gpuTest5.py  gpuTest6.py  gpuTest7.py  multiGPU.py
OpenAI_Practise/: test_env.py  test_env_v1.py
Quick_Dirty_TestBench/: test.py
Traffic_Sign/: Basic_Traffic_Sign_Recon.py
forest-developer/results/: compare_tif.pptx
forest-developer/slack_discussion/: how to read export
forest-developer/standard/: Model_Results.xlsx
forest-developer/starter kit -7/: ~$baseline-7.pptx
(+424 files in other folders)
